logs/luca.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/fdfgen'...
Listing './lib/python3.5/site-packages/fdfgen-0.16.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/luca'...
Compiling './lib/python3.5/site-packages/luca/commandline.py'...
***   File "./lib/python3.5/site-packages/luca/commandline.py", line 35
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/luca/files.py'...
***   File "./lib/python3.5/site-packages/luca/files.py", line 56
    fd = os.open(pathname, os.O_WRONLY | os.O_CREAT | os.O_EXCL, 0666)
                                                                    ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/luca/forms'...
Compiling './lib/python3.5/site-packages/luca/forms/actions.py'...
***   File "./lib/python3.5/site-packages/luca/forms/actions.py", line 50
    print '   luca form {} {}'.format(form_name, version)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/luca/forms/formlib.py'...
***   File "./lib/python3.5/site-packages/luca/forms/formlib.py", line 102
    _decimal_re = re.compile(ur'^-?[\d,]+\.[\d,]+$')
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/luca/forms/us'...
Listing './lib/python3.5/site-packages/luca/forms/us_ga'...
Listing './lib/python3.5/site-packages/luca/forms/us_oh'...
Listing './lib/python3.5/site-packages/luca/importer'...
Compiling './lib/python3.5/site-packages/luca/importer/dccu.py'...
***   File "./lib/python3.5/site-packages/luca/importer/dccu.py", line 16
    _checking_beginning_re = re.compile(ur"""
    \s+
    (\d\d)/(\d\d)\s+       # "Posting Date"
    (ID\ \d\d\d\d\ .*)     # (Account name)
    Balance\ Forward\s+
    (\d+\.\d\d)$           # "NEW BALANCE"
    """, re.VERBOSE)
                                             
       
                                           
                                           
                       
                                          
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/luca/importer/gnucash.py'...
***   File "./lib/python3.5/site-packages/luca/importer/gnucash.py", line 9
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/luca/importer/yodlee.py'...
***   File "./lib/python3.5/site-packages/luca/importer/yodlee.py", line 61
    print ';', comment.strip()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/luca/model.py'...
***   File "./lib/python3.5/site-packages/luca/model.py", line 18
    print ';', self.line
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/luca/ofx'...
Compiling './lib/python3.5/site-packages/luca/ofx/io.py'...
***   File "./lib/python3.5/site-packages/luca/ofx/io.py", line 50
    print '-----------'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/luca/tests'...
Compiling './lib/python3.5/site-packages/luca/tests/test_samples.py'...
***   File "./lib/python3.5/site-packages/luca/tests/test_samples.py", line 26
    print "arg is", sample_filing_path
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/luca-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyPdf'...
Compiling './lib/python3.5/site-packages/pyPdf/generic.py'...
***   File "./lib/python3.5/site-packages/pyPdf/generic.py", line 102
    raise utils.PdfReadError, "error reading null object"
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/pdf.py'...
***   File "./lib/python3.5/site-packages/pyPdf/pdf.py", line 655
    raise Exception, "file has not been decrypted"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/utils.py'...
***   File "./lib/python3.5/site-packages/pyPdf/utils.py", line 77
    raise TypeError, "sequence indices must be integers"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyPdf-1.13.egg-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
